objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Is_ADL_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>ADL Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ANXIETY_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify that survey is submitted or not.</description>
        <label>ANXIETY Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BRAIN_DISEASE_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>BRAIN DISEASE Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CANCER_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify that survey is submitted or not.</description>
        <label>CANCER Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_COVID_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>COVID Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_DIET_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>DIET Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ECog12_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify that survey is submitted or not.</description>
        <label>ECog-12 Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FHAD_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>FHAD Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HEALTH_MEDICAL_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify that survey is submitted or not</description>
        <label>HEALTH MEDICAL Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Heat_Survey_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify that survey is submitted or not.</description>
        <label>Heat Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PERCEIVED_STRESS_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>PERCEIVED STRESS Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_QPAR_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>QPAR Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SES_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>SES Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SLEEP_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>SLEEP Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SOCIAL_STRESSOR_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify that survey is submitted or not.</description>
        <label>SOCIAL STRESSOR Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SOCIAL_SUPPORT_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify that survey is submitted or not.</description>
        <label>SOCIAL SUPPORT Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SUBJECTIVE_ENGLISH_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>SUBJECTIVE ENGLISH Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SWLS_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>SWLS Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WOMENS_HEALTH_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to idetify that survey is submitted or not.</description>
        <label>WOMENS HEALTH Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_it_Paid_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is it Paid Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Track__c</fullName>
        <label>Keep Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language selected by test-taker at public application.</description>
        <inlineHelpText>If you are multi-lingual you may want to select the language that you are most fluent in</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Español</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Number_Sequencing__c</fullName>
        <label>Letter-Number Sequencing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marker__c</fullName>
        <label>Marker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_fluent_language__c</fullName>
        <description>Language in which test-taker is most fluent</description>
        <label>Most fluent language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                    <label>Español</label>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Arabia</fullName>
                    <label>العربية</label>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                    <label>Български</label>
                </value>
                <value>
                    <fullName>Catalan; Valencia</fullName>
                    <label>Català  valencià</label>
                </value>
                <value>
                    <fullName>Czech</fullName>
                    <label>Čeština</label>
                </value>
                <value>
                    <fullName>Welsh</fullName>
                    <label>Cymraeg</label>
                </value>
                <value>
                    <fullName>Dansk</fullName>
                </value>
                <value>
                    <fullName>Deutsch</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                    <label>Ελληνικά</label>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                    <label>Eesti</label>
                </value>
                <value>
                    <fullName>Basque</fullName>
                    <label>Euskara</label>
                </value>
                <value>
                    <fullName>Persian</fullName>
                    <label>فارسی</label>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                    <label>Suomi</label>
                </value>
                <value>
                    <fullName>French</fullName>
                    <label>Français</label>
                </value>
                <value>
                    <fullName>Irish</fullName>
                    <label>Gaeilge</label>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                    <label>ગુજરાતી</label>
                </value>
                <value>
                    <fullName>Abrit</fullName>
                    <label>עברית</label>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                    <label>हिंदी</label>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                    <label>Hrvatski</label>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                    <label>Magyar</label>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                    <label>Bahasa Indonesia</label>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                    <label>Íslenska</label>
                </value>
                <value>
                    <fullName>Italian</fullName>
                    <label>Italiano</label>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                    <label>日本語</label>
                </value>
                <value>
                    <fullName>Korean</fullName>
                    <label>한국어</label>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                    <label>Latviešu</label>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                    <label>Lietuvių</label>
                </value>
                <value>
                    <fullName>Malayalam</fullName>
                    <label>മലയാളം</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_fluent_language_in_English__c</fullName>
        <formula>TEXT( Most_fluent_language__c )</formula>
        <label>Most fluent language in English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_daily_medications__c</fullName>
        <description>Number of time test-taker takes medication in a day.</description>
        <label>Number of daily medications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>More than three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_fluent_languages_spoken__c</fullName>
        <description>Number of  languages spoken by test-taker</description>
        <label>Number of fluent languages spoken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_fluent_languages_written__c</fullName>
        <description>Number of languages which test-taker can write fluently</description>
        <label>Number of fluent languages written</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Discrimination__c</fullName>
        <label>Object Discrimination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Recognition_And_Similarity__c</fullName>
        <label>Object Recognition And Similarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Spatial__c</fullName>
        <label>Object Spatial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Temporal__c</fullName>
        <label>Object Temporal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Gender__c</fullName>
        <label>Other Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERCEIVED_STRESS__c</fullName>
        <label>PERCEIVED STRESS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to mark duplicate contact records.</description>
        <inlineHelpText>This field contains the reference to parent contact which already have the data same/similar to this contact.</inlineHelpText>
        <label>Parent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Duplicate_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParticipantCode__c</fullName>
        <description>To store unique participant code corresponding to each Contact. It gets generated whenever a new contact is created. This code is used to uniquely identify the customer while saving data through the form which is shared with participant via link over email to get customer address details.</description>
        <formula>IF(DATEVALUE(CreatedDate) &lt; DATEVALUE( &quot;2022-08-25&quot; ), &apos;PC&apos;+LEFT(CASESAFEID(Id),6)+&apos;-CD&apos;+ MID( CASESAFEID(Id) ,7,2)+ &apos;-MD&apos;+MID( CASESAFEID(Id) ,9,2)+&apos;-CD&apos;+RIGHT(CASESAFEID(Id),8), Secure_GUID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParticipantCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Type__c</fullName>
        <label>Participation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Catchment</fullName>
                </value>
                <value>
                    <fullName>Expended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project2_Center_Id__c</fullName>
        <label>Project2 Center Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project2_Disenrollment_Date__c</fullName>
        <label>Project2 Disenrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project2_Enrollment_Date__c</fullName>
        <label>Project2 Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPAR__c</fullName>
        <label>QPAR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Test-taker&apos;s race.</description>
        <inlineHelpText>Select the race you belong to.</inlineHelpText>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Multiracial or Mixed Race</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                    <isActive>false</isActive>
                    <label>Mixed</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_test_taker__c</fullName>
        <label>Repeat test-taker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SES__c</fullName>
        <label>SES</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLEEP__c</fullName>
        <label>SLEEP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOCIAL_STRESSOR__c</fullName>
        <label>SOCIAL STRESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOCIAL_SUPPORT__c</fullName>
        <label>SOCIAL SUPPORT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SUBJECTIVE_ENGLISH__c</fullName>
        <label>SUBJECTIVE ENGLISH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SWLS__c</fullName>
        <label>SWLS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_degree_family_history_of_AD__c</fullName>
        <description>(Grandparents, grandchildren, aunts, uncles, nephews, nieces, or half-siblings) Say yes if any diagnosed with alzheimer in past</description>
        <label>Second-degree family history of AD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don’t know</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_GUID__c</fullName>
        <label>Secure GUID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <description>Test-taker&apos;s biological sex</description>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Intersex</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                    <isActive>false</isActive>
                    <label>Prefer not to answer</label>
                </value>
                <value>
                    <fullName>unknown</fullName>
                    <isActive>false</isActive>
                    <label>unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is mapped on participant consent form(lwc component).It will hold the value whether the participant want to receive shipment or not.</description>
        <label>Shipment Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Consent__c</fullName>
        <description>This field is used to store the shipment consent of the participant.</description>
        <label>Shipping Consent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>decline</fullName>
                </value>
                <value>
                    <fullName>consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Id</label>
        <referenceTo>Studies__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Participant_Id__c</fullName>
        <label>Study Participant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Id__c</fullName>
        <label>Sub Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribed_Status__c</fullName>
        <label>Subscribed Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_With_MC__c</fullName>
        <description>This field is used to make the record which should be synced to marketing cloud.</description>
        <formula>AND(NOT(ISBLANK(Activation_Date__c)), NOT(ISBLANK(Email)))</formula>
        <inlineHelpText>This record will sync to Marketing Cloud.</inlineHelpText>
        <label>Sync With MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tell_Me_More__c</fullName>
        <label>Tell Me More</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tell_Me__c</fullName>
        <label>Tell Me</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_That__c</fullName>
        <label>This and That</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tremendous_Award_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tremendous Award Sent</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>